buildscript {
    ext {
        springBootVersion = '2.1.6.RELEASE'
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id "io.franzbecker.gradle-lombok" version "3.1.0"
    id 'com.sourcemuse.mongo' version '1.0.7'
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.silaev.wms'
version = '0.0.4-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

springBoot {
    mainClassName = 'com.silaev.wms.WmsApplication'
}

task integrationTest(type: Test) {
    runWithMongoDb = true
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.boot:spring-boot-starter-webflux')
    implementation('org.springframework.boot:spring-boot-starter-security')
    implementation('org.bouncycastle:bcprov-jdk15on:1.60')
    implementation('org.apache.poi:poi-ooxml:4.0.0')
    implementation('commons-io:commons-io:2.6')

    runtimeOnly('org.springframework.boot:spring-boot-devtools')

    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation('io.projectreactor:reactor-test')
    testImplementation('org.springframework.security:spring-security-test')

    compile group: 'io.projectreactor.tools', name: 'blockhound', version: '1.0.0.M4'

    //compile 'io.projectreactor:reactor-tools:3.3.0.M2'
    //compile group: 'org.testcontainers', name: 'testcontainers', version: '1.11.3'
    //compile group: 'com.vladmihalcea', name: 'db-testutil', version: '0.0.1'
}

test {
    maxParallelForks = 1
    testLogging.showStandardStreams = true
    testLogging.exceptionFormat = 'full'
}